fix: adjust visibility on first load.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,14 @@
     overflow-x: hidden;
   }
 
+  .panel:not(:first-child) {
+    visibility: hidden
+  }
+
+  body.js-loaded .panel {
+    visibility: visible;
+  }
+
   /* scroll class */
   .scroll-triggering-absolute {
     @apply absolute inset-0;
